# QURScanner

./: CMakeLists.txt  README.md  camera.cpp  camera.h  camera.pro  camera.ui  main.cpp  multiparturstatus.cpp  multiparturstatus.h  qurscanner.cpp  qurscanner.h  resultspage.cpp  resultspage.h  scanpage.cpp  scanpage.h  urscanner.cpp  urscanner.h  urutils.cpp  urutils.h  videosurface.cpp  videosurface.h
